// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI-01 снимки главного экрана > без материалов — онбординг 1`] = `"Пока нет ни одного материала"`;

exports[`UI-01 снимки главного экрана > все архивированы: 0 ₽ и — 1`] = `
"В работе:    0 ₽

СЕГОДНЯ · 20 августа        —
Август         +10 562 ₽ / +1.07%

Нет материалов в работе — все в архиве."
`;

exports[`UI-01 снимки главного экрана > есть замороженные и все заморожены 1`] = `
"В работе:    0 ₽
Заморожено:  318 861 ₽
Всего:      1 000 327 ₽

СЕГОДНЯ · 20 августа        +327 ₽ / +0.03%
Август         +10 562 ₽ / +1.07%

Заморожено:

🔴 Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;

exports[`UI-01 снимки главного экрана > нет предыдущего дня: P&L — 1`] = `
"В работе:    681 466 ₽
Заморожено:  318 861 ₽
Всего:      1 000 327 ₽

СЕГОДНЯ · 20 августа        —
Август         +10 562 ₽ / +1.07%

В работе:

🟢 Сбер 7121* — 124 276 ₽
+200 ₽ / +0.16%

────────
🔵 Втб 0134* — 557 190 ₽
+0 ₽ / 0.00%

Заморожено:

🔴 Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;

exports[`UI-01 снимки главного экрана > обычный экран: T-6 сумма материалов = всего, UI-14 формат 1`] = `
"В работе:    681 466 ₽
Заморожено:  318 861 ₽
Всего:      1 000 327 ₽

СЕГОДНЯ · 20 августа        +327 ₽ / +0.03%
Август         +10 562 ₽ / +1.07%

В работе:

🟢 Сбер 7121* — 124 276 ₽
+200 ₽ / +0.16%

────────
🔵 Втб 0134* — 557 190 ₽
+0 ₽ / 0.00%

Заморожено:

🔴 Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;
